Replace porcupine with pocketsphinx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "coqui-tts>=0.27.3",
     "fastapi>=0.128.0",
     "openai-whisper>=20250625",
-    "pvporcupine>=4.0.1",
+    "pocketsphinx>=5.0",
     "pyaudio>=0.2.14",
     "python-multipart>=0.0.21",
     "sounddevice>=0.5.3",
