--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,18 @@ name = "homeagent"
 version = "0.1.0"
 description = "Smart Home AI backbone"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12"
 dependencies = [
     "coqui-tts>=0.27.3",
     "fastapi>=0.128.0",
-    "openai-whisper>=20250625",
+    "kokoro>=0.9.4",
     "pocketsphinx>=5.0",
     "pyaudio>=0.2.14",
     "python-multipart>=0.0.21",
+    "realtimestt>=0.3.104",
     "sounddevice>=0.5.3",
     "uvicorn>=0.40.0",
+    "whisperx>=3.8.1",
 ]
 
 [dependency-groups]
