--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "coqui-tts>=0.27.3",
     "fastapi>=0.128.0",
+    "ipython>=9.10.0",
     "kokoro>=0.9.4",
+    "pip>=26.0.1",
     "pocketsphinx>=5.0",
     "pyaudio>=0.2.14",
     "python-multipart>=0.0.21",
