--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ requires-python = ">=3.12"
 dependencies = [
     "coqui-tts>=0.27.3",
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
     "ipython>=9.10.0",
     "kokoro>=0.9.4",
     "pip>=26.0.1",
     "pocketsphinx>=5.0",
     "pyaudio>=0.2.14",
+    "python-dotenv>=1.2.1",
     "python-multipart>=0.0.21",
     "realtimestt>=0.3.104",
     "sounddevice>=0.5.3",
