--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "httpx>=0.28.1",
     "ipython>=9.10.0",
     "kokoro>=0.9.4",
+    "langchain>=1.2.10",
+    "langchain-community>=0.4.1",
+    "langchain-openai>=1.1.10",
+    "openai>=2.21.0",
     "pip>=26.0.1",
     "pocketsphinx>=5.0",
     "pyaudio>=0.2.14",
