--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
     "ipython>=9.10.0",
-    "kokoro>=0.9.4",
+    "kokoro-onnx>=0.5.0",
     "langchain>=1.2.10",
     "langchain-community>=0.4.1",
     "langchain-openai>=1.1.10",
+    "misaki-fork[en]>=0.9.6",
+    "nltk>=3.9.2",
     "openai>=2.21.0",
     "pip>=26.0.1",
     "pocketsphinx>=5.0",
