--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
     "ipython>=9.10.0",
+    "jinja2>=3.1.6",
     "kokoro-onnx>=0.5.0",
     "langchain>=1.2.10",
     "langchain-community>=0.4.1",
